k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: tassianna/k8s-training:backend
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-loadbalancer
  namespace: backend-ns
spec:
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
    #nodePort: 31001
  type: NodePort
