k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: frontend-ns
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s-training-app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-loadbalancer
            port:
              number: 80
      - pathType: Prefix
        path: "/api/products"
        backend:
          service:
            name: backend-loadbalancer
            port:
              number: 3000
